--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,33 @@
-django>=3.2.14
+asgiref==3.8.1
+Brotli==1.1.0
+cffi==1.17.1
+colorama==0.4.6
+cssselect2==0.8.0
+Django==4.2.19
+dotenv==0.9.9
+et_xmlfile==2.0.0
+exceptiongroup==1.2.2
+fonttools==4.57.0
+iniconfig==2.0.0
+mysql==0.0.3
+mysqlclient==2.2.7
+openpyxl==3.1.5
+packaging==24.2
+pillow==11.2.1
+pluggy==1.5.0
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.17.2
+pytest==8.3.4
+python-dotenv==1.1.0
+qrcode==8.1
+sqlparse==0.5.3
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+tomli==2.2.1
+typing_extensions==4.12.2
+tzdata==2025.1
+weasyprint==65.1
+webencodings==0.5.1
+whitenoise==6.9.0
+zopfli==0.2.3.post1
