--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,59 @@
 aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiohttp-retry==2.9.1
-aiosignal==1.3.2
-asgiref==3.8.1
-attrs==25.3.0
-Brotli==1.1.0
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
+aiohttp==3.8.5
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+asgiref==3.6.0
+attrs==23.1.0
+Brotli==1.0.9
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.1.0
 colorama==0.4.6
-cssselect2==0.8.0
+cssselect2==0.7.0
 Django==4.2.10
-django-extensions==3.2.3
-et_xmlfile==2.0.0
-fonttools==4.56.0
-frozenlist==1.6.0
-git-filter-repo==2.47.0
-gunicorn==23.0.0
-idna==3.10
-iniconfig==2.1.0
-multidict==6.4.3
-numpy==2.0.2
-openpyxl==3.1.5
-packaging==24.2
-pandas==2.2.3
-patsy==1.0.1
-pillow==11.1.0
-pluggy==1.5.0
+django-extensions==3.2.1
+et_xmlfile==1.1.0
+fonttools==4.39.4
+frozenlist==1.3.3
+git-filter-repo==2.38.0
+gunicorn==20.1.0
+idna==3.4
+iniconfig==2.0.0
+multidict==6.0.4
+numpy==1.24.4
+openpyxl==3.1.2
+packaging==23.1
+pandas==1.5.3
+patsy==0.5.3
+pillow==9.5.0
+pluggy==1.2.0
 propcache==0.3.1
-pycparser==2.22
-pydyf==0.11.0
-PyJWT==2.10.1
-PyMySQL==1.1.1
-pyphen==0.17.2
-PyQt5==5.15.11
+pycparser==2.21
+pydyf==0.10.0
+PyJWT==2.8.0
+PyMySQL==1.1.0
+pyphen==0.14.0
+PyQt5==5.15.9
 PyQt5-Qt5==5.15.2
-PyQt5_sip==12.17.0
-pytest==8.3.5
-python-barcode==0.15.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-pytz==2025.1
-qrcode==8.0
-requests==2.32.3
-scipy==1.15.2
-six==1.17.0
-sqlparse==0.5.3
-statsmodels==0.14.4
-tinycss2==1.4.0
+PyQt5_sip==12.11.0
+pytest==7.4.4
+python-barcode==0.14.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3
+qrcode==7.4.2
+requests==2.31.0
+scipy==1.10.1
+six==1.16.0
+sqlparse==0.4.4
+statsmodels==0.13.5
+tinycss2==1.2.1
 tinyhtml5==2.0.0
-twilio==9.6.0
-tzdata==2025.1
-urllib3==2.4.0
-weasyprint==65.0
+twilio==8.10.0
+tzdata==2023.3
+urllib3==1.26.16
+weasyprint==60.1
 webencodings==0.5.1
 wfastcgi==3.0.0
-yarl==1.20.0
-zopfli==0.2.3.post1
+yarl==1.9.2
+zopfli==0.2.2
