--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.8.5
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
 asgiref==3.6.0
+async-timeout==4.0.3
 attrs==23.1.0
 Brotli==1.0.9
 certifi==2023.7.22
@@ -12,20 +13,25 @@ colorama==0.4.6
 cssselect2==0.7.0
 Django==4.2.10
 django-extensions==3.2.1
-et_xmlfile==1.1.0
+dotenv==0.9.9
+et-xmlfile==1.1.0
+exceptiongroup==1.2.2
 fonttools==4.39.4
 frozenlist==1.3.3
 git-filter-repo==2.38.0
 gunicorn==20.1.0
+html5lib==1.1
 idna==3.4
 iniconfig==2.0.0
 multidict==6.0.4
+mysql==0.0.3
+mysqlclient==2.1.1
 numpy==1.24.4
 openpyxl==3.1.2
 packaging==23.1
 pandas==1.5.3
 patsy==0.5.3
-pillow==9.5.0
+Pillow==9.5.0
 pluggy==1.2.0
 propcache==0.3.1
 pycparser==2.21
@@ -33,9 +39,10 @@ pydyf==0.10.0
 PyJWT==2.8.0
 PyMySQL==1.1.0
 pyphen==0.14.0
+pypng==0.20220715.0
 PyQt5==5.15.9
 PyQt5-Qt5==5.15.2
-PyQt5_sip==12.11.0
+PyQt5-sip==12.11.0
 pytest==7.4.4
 python-barcode==0.14.0
 python-dateutil==2.8.2
@@ -49,13 +56,14 @@ sqlparse==0.4.4
 statsmodels==0.13.5
 tinycss2==1.2.1
 tinyhtml5==2.0.0
+tomli==2.2.1
 twilio==8.10.0
+typing_extensions==4.12.2
 tzdata==2023.3
 urllib3==1.26.16
 weasyprint==60.1
 webencodings==0.5.1
 wfastcgi==3.0.0
+whitenoise==6.9.0
 yarl==1.9.2
 zopfli==0.2.2
-mysqlclient==2.1.1
-
